--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     // Firebase auth
     implementation 'com.google.firebase:firebase-auth'
+    // Firebase Firestore
+    implementation 'com.google.firebase:firebase-firestore'
+
 }
