Added animation library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     // Firebase Firestore
     implementation 'com.google.firebase:firebase-firestore'
 
+    // Lottie
+    implementation "com.airbnb.android:lottie:3.4.4"
 }
